[tool.poetry]
name = "trading-system-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pandas = "^1.3.4"
pandas-datareader = "^0.10.0"
requests-cache = "^0.8.1"
plotly = "^5.3.1"
sklearn = "^0.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp39-cp39-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
